# Parallelized_GTasb3D

./: CMakeLists.txt
include/: bodyphysics.hpp  common.hpp  fdmnode.hpp  master.hpp  split.hpp  vector3d.hpp
src/: fdmnode.cpp  main.cpp  master.cpp
